--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -2,6 +2,7 @@
   "name": "vue-demo",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://wen-hong.github.io/vue-demo",
   "type": "module",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
@@ -11,7 +12,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --cache",
-    "format": "prettier --write --experimental-cli src/"
+    "format": "prettier --write --experimental-cli src/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -25,6 +27,7 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "~10.5.1",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "prettier": "3.6.2",
     "vite": "^7.2.4",
