Update package.json for GitHub Pages deployment

--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -2,7 +2,7 @@
   "name": "vue-demo",
   "version": "0.0.0",
   "private": true,
-  "homepage": "https://wen-hong.github.io/Vue_DEMO",
+  "homepage": "https://wen-hong.github.io/vue-demo",
   "type": "module",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
