--- a/vue-demo-backend/package.json
+++ b/vue-demo-backend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "jwt-decode": "^4.0.0"
+    "jwt-decode": "^4.0.0",
+    "multer": "^2.0.2"
   }
 }
