--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -16,7 +16,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/vue3": "^6.1.20",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
