--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/daygrid": "^6.1.20",
     "@fullcalendar/interaction": "^6.1.20",
     "@fullcalendar/vue3": "^6.1.20",
+    "@supabase/supabase-js": "^2.89.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
