--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -13,7 +13,8 @@
     "preview": "vite preview",
     "lint": "eslint . --fix --cache",
     "format": "prettier --write --experimental-cli src/",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build && node -e \"require('fs').writeFileSync('dist/.nojekyll','')\"",
+    "deploy": "gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.20",
